2010-03-23  Sam Steingold  <sds@gnu.org>

	Fix bug#5620: recalculate all markers on compilation buffer
	modifications, not on file modifications.
	* progmodes/compile.el (buffer-modtime): New buffer-local variable:
	the buffer modification time, for buffers not associated with files.
	(compilation-mode): Create it.
	(compilation-filter): Update it.
	(compilation-next-error-function): Use it instead of
	`visited-file-modtime' for timestamp.

2010-03-23  Juri Linkov  <juri@jurta.org>

	Implement Occur multi-line matches.
	http://lists.gnu.org/archive/html/emacs-devel/2010-03/msg01044.html

	* replace.el (occur): Doc fix.
	(occur-engine): Set `begpt' to the beginning of the first line.
	Set `endpt' to the end of the last match line.  At first, count
	line numbers between `origpt' and `begpt'.  Split out code from
	`out-line' variable to new let-bindings `match-prefix' and
	`match-str'.  In `out-line' add non-numeric prefix to all
	non-first lines of multi-line matches.  Finally, count lines
	between `begpt' and `endpt' and add to `lines'.

2010-03-23  Juri Linkov  <juri@jurta.org>

	* replace.el (occur-accumulate-lines, occur-engine):
	Use `occur-engine-line' instead of duplicate code.
	(occur-engine-line): New function created from duplicate code
	in `occur-accumulate-lines' and `occur-engine'.

	* replace.el (occur-engine-line): Add optional arg `keep-props'.
	(occur-accumulate-lines, occur-engine): Add arg `keep-props'.

2010-03-23  Juri Linkov  <juri@jurta.org>

	* finder.el: Remove TODO tasks.

	* info.el (Info-finder-find-node): Add node "all"
	with all package info.  Handle a list of multiple keywords
	separated by comma.
	(info-finder): In interactive use with a prefix argument,
	use `completing-read-multiple' to read a list of keywords
	separated by comma.

2010-03-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	Add a new completion style `substring'.
	* minibuffer.el (completion-basic--pattern): New function.