@@ -1,3 +1,8 @@
+2010-03-24  Glenn Morris  <rgm@gnu.org>
+
+	* cedet/semantic/bovine/c.el (semantic-c-describe-environment):
+	Consistently check ede-object is bound throughout.
+
 2010-03-23  Sam Steingold  <sds@gnu.org>
 
 	Fix bug#5620: recalculate all markers on compilation buffer
